Keycloak integration - login page styling

--- a/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
@@ -60,7 +60,7 @@
 	                        <h4 class="keycloak-or-line"></h4>
                         </div>
                     
-                        <button (click)="onClickKeycloak()" class="keycloak-login-button btn-default">
+                        <button (click)="onClickKeycloak()" class="keycloak-login-button btn btn-default">
                           <span class="keycloak-login-button-text">
                             Log in with 
                           </span>
