--- a/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/login/login.component.html
@@ -65,8 +65,8 @@
                             Log in with 
                           </span>
                           <span>
-									            <img alt="Logo" src="https://www.geoplatform.gov/wp-content/themes/geoplatform-portal-four/img/logo.svg" style="width:2em">
-									            <span class="keycloak-login-button-text">GeoPlatform.gov</span>
+									            <img class="keycloak-login-button-image" alt="Logo" src="https://www.geoplatform.gov/wp-content/themes/geoplatform-portal-four/img/logo.svg" style="width:2em">
+									            <span class="keycloak-login-button-text">GeoPlatform</span>
                           </span>
                         </button>
                       </div>
