--- a/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
@@ -34,6 +34,10 @@
                             <i *ngIf="product.orthoMapped" [@bounceInOnEnter] [@bounceOutOnLeave] class="fas fa-check" style="color: #007276;float: right;vertical-align: middle;line-height: 20px;"></i>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
+                            <a class="fa fa-globe" [ngClass]="{'active': product.demMapped}" (click)="handleMapDem(product)" title="Map Elevation">DEM</a>
+                            <i *ngIf="product.demMapped" [@bounceInOnEnter] [@bounceOutOnLeave] class="fas fa-check" style="color: #007276;float: right;vertical-align: middle;line-height: 20px;"></i>
+                        </li>
+                        <li style="padding: 3px 0 3px 0;">
                             <a class="fa fa-globe" [ngClass]="{'active': false}" (click)="handlePointcloud(product)" title="3D">3D</a>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
