--- a/uasdm-web/src/main/ng2/src/styles/main.css
+++ b/uasdm-web/src/main/ng2/src/styles/main.css
@@ -1896,7 +1896,6 @@ i.fa.fa-cloud-upload{
 ** page specific overrides must be added to other css files to maintain this as a generic element
 */    
 .list-table-wrapper{
-	max-height: 400px;
     overflow-y: auto;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -2175,6 +2174,7 @@ i.fa.fa-cloud-upload{
 .button-column .fa {
     color: #767676; /* IE fallback */
     color: var(--theme-button-black);
+    margin: 5px;
 }
 
 i.fa {
@@ -2294,6 +2294,8 @@ button.btn.btn-primary,
 
     border-color: lightgrey; /* IE fallback */
     border-color: var(--theme-button-color-border);
+    
+    margin-left: 5px;
 }
 input[type=button].btn.btn-primary:hover, 
 input[type=submit].btn.btn-primary:hover,
