--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -81,21 +81,20 @@
                               
                                 <!-- <div class="card-header">Header</div> -->
                               <div class="card-body card-5-7" >
-                                <div class="card-left">
-                                  <!-- <img src="https://via.placeholder.com/75x75" class="img-responsive"> -->
-                                   <i class="fas fa-map-marker-alt" style="font-size: 50px;"></i>
-                                </div>
-                                <div class="card-right">
-                                  <h4 style="word-break: break-all;">
+                                <div>
+                                   <!-- <i class="fas fa-map-marker-alt" style="font-size: 50px;"></i> -->
+                                   <h4 style="word-break: break-all;">
                                     <!-- <a (click)="select(node, $event)"> -->
                                       {{node.name}}
                                     <!-- </a> -->
                                   </h4>
-                                  <span *ngIf="node.type !== 'folder'" class="pull-right button-column floating" style="top: 0;position: absolute;right: 0;">
+                                  <span>
+                                    <span><b>{{node.numberOfChildren}}</b> {{getMetadata(node).childLabel}}</span>
+                                    <span *ngIf="node.type !== 'folder'" class="pull-right">
                                     <a class="fa fa-pencil-alt ico-edit" (click)="handleEdit(node, $event)" title="Edit"></a>
                                     <a class="fa fa-trash-alt ico-remove" (click)="handleDelete(node, $event)" title="Delete"></a>                                   
                                   </span>  
-                                  <p><b>{{node.numberOfChildren}}</b> {{getMetadata(node).childLabel}}</p>
+                                  </span>
                                 </div>
                               </div>
                               <!-- <div class="card-footer">Footer</div> -->
