--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -12,7 +12,7 @@
                   <!-- IF at Site level -->
                   <div class="row" *ngIf="!current">
                     <div class="col-md-6" style="height: 56px;">
-                      <h3>IDM Sites</h3>
+                      <h3 style="text-shadow: -1px -1px 1px #000, 1px 1px 1px #ccc;">IDM Sites</h3>
                     </div>
                   </div>
             
