Site explorer styling.

--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -92,7 +92,7 @@
                               <div class="card-body card-5-7" >
                                 <div>
                                    <!-- <i class="fas fa-map-marker-alt" style="font-size: 50px;"></i> -->
-                                   <h4 style="word-break: break-all; border-bottom-color:rgba(195, 195, 195, 0.5); border-bottom-style:inset;">
+                                   <h4 style="word-break: break-all; border-bottom-color:rgba(195, 195, 195, 0.3); border-bottom-style:inset; border-bottom-width: 2px; margin-bottom:10px; padding-bottom:10px;">
                                      <!-- <a (click)="select(node, $event)"> -->
                                       {{node.name}}
                                      <!-- </a> -->
