--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -146,22 +146,22 @@
                 <button *ngIf="!entity.metadataUploaded" type="button" class="btn btn-warning"
                   [disabled]="processRunning" (click)="handleSetMetadata()">
                   <i class="fa fa-plus" style="color:white"></i>
-                  Add metadata
+                  Add Metadata
                 </button>
               </div>
               <div class="col-md-10" style="text-align: right;">
                 <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
-                <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
+                <button *ngIf="processable" type="button" class="btn btn-secondary" title="Downloads all files in the {{folder.name}} folder." [disabled]="processRunning"
                   (click)="handleDownload()" style="margin-left: 5px;">
-                  Download all {{folder.name}}
+                  Download All {{capitalize(folder.name)}}
                 </button>
                 <button *ngIf="processable" type="button" class="btn btn-secondary" [disabled]="processRunning"
-                  (click)="handleDownloadOdmAll()" style="margin-left: 5px;">
-                  Download ODM all zip
+                  (click)="handleDownloadOdmAll()" title="Downloads the all.zip file generated from ODM." style="margin-left: 5px;">
+                  Download All Generated Data
                 </button>
                 <button *ngIf="processable && enableSelectableImages" [disabled]="processRunning"
-                  (click)="handleRunOrtho()" class="btn btn-primary" style="margin-left: 5px;">
-                  Reprocess imagery
+                  (click)="handleRunOrtho()" class="btn btn-primary" title="Reprocesses the selected raw imagery and generates new products." style="margin-left: 5px;">
+                  Reprocess Imagery
                   <i class="fa fa-sync-alt" [ngClass]="{'fa-spin' : processRunning}" aria-hidden="true"
                     style="color:white;vertical-align: middle;margin-left: 10px;"></i>
                 </button>
