Add documentation link.

--- a/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/system/system-info.component.html
@@ -10,6 +10,7 @@
         <ul>
             <li>IDM Platform Version: <span id="automated-version-replace">0.001.002</span></li>
             <li>Open Drone Map (ODM): v0.9.1</li>
+            <li><a href="https://terraframe.atlassian.net/wiki/spaces/OSMRE/overview">View Documentation</a></li>
         </ul>
         
     </div>
