Another batch of front-end niceities.

--- a/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/product-panel/product-panel.component.html
@@ -12,7 +12,7 @@
     
     <div *ngFor="let product of products" class="list-group-item">
         <div class="card card-default" [@fadeInOnEnter] [@fadeOutOnLeave]>
-            <div class="card-body card-8-4">
+            <div class="card-body">
                 <h5 class="card-title" style="color:#a0a0a0">
                     {{product.name}}
                 </h5>
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
 
-                <div class="card-left">
+                <div class="card-left" style="width:calc(100% - 7.2em); padding:0px;">
                     
                     <!-- <img src="https://via.placeholder.com/150x75" class="img-responsive"> -->
 
@@ -33,7 +33,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="card-right" style="padding-left:0px;">
+                <div class="card-right" style="padding:0px; width: 7.2em;">
                     <ul style="list-style: none;padding: 0;">
                         <li style="padding: 3px 0 3px 0; min-width:6em;">
                             <a class="fa fa-globe" aria-hidden="true" [ngClass]="{'active': product.orthoMapped}" (click)="handleMapIt(product)" title="View the Orthomosaic generated from the raw data using ODM.">Aerial</a>
@@ -44,19 +44,19 @@
                             <i *ngIf="product.demMapped" [@bounceInOnEnter] [@bounceOutOnLeave] class="fas fa-check" style="color: #007276;float: right;vertical-align: middle;line-height: 20px;"></i>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
-                            <a class="fa fa-cube" aria-hidden="true" [ngClass]="{'active': false}" (click)="handlePointcloud(product)" title="View the 3D pointcloud for this product using the PoTree viewer.">3D</a>
+                            <a class="fa fa-cube" aria-hidden="true" [ngClass]="{'active': false}" (click)="handlePointcloud(product)" title="View the 3D pointcloud for this product using the Potree viewer.">3D</a>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
                             <a class="fa fa-info-circle" (click)="handleGetInfo(product)" title="View more information about this product, including raw data.">Get Info</a>
                         </li>
                         <li style="padding: 3px 0 3px 0;">
-                            <a class="fa fa-trash-alt" (click)="handleDelete(product, $event)" title="Deletes the product and all associated data and layers, including what is stored on S3.">Delete</a>
+                            <a class="fa fa-trash-alt" (click)="handleDelete(product, $event)" title="Deletes the product and all associated data and public map services.">Delete</a>
                         </li>
                         <li *ngIf="product.published" style="padding: 3px 0 3px 0;">
                             <a class="fa fa-arrow-alt-circle-down" (click)="handleTogglePublish(product)" title="Unpublishes the layer from the public mosaic. This layer will no longer be publicly accessible from Geoserver.">Unpublish</a>
                         </li>
                         <li *ngIf="!product.published" style="padding: 3px 0 3px 0;">
-                            <a class="fa fa-arrow-alt-circle-up" (click)="handleTogglePublish(product)" title="Publish the layer to the public mosaic. This layer will be publicly accessible from Geoserver.">Publish</a>
+                            <a class="fa fa-arrow-alt-circle-up" (click)="handleTogglePublish(product)" title="Publish the product to the publish mosaic. The aerial and hillshade services will be publicly accessible.">Publish</a>
                         </li>
                     </ul>             
                 </div>
