--- a/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/tasks.component.html
@@ -12,8 +12,8 @@
 
           <div id="tasks-container">
             <div class="row">
-              <h3 class="col-sm-9">Issue</h3>
-              <h3 class="col-sm-3">Actions</h3>
+              <h3 class="col-sm-7">Issue</h3>
+              <h3 class="col-sm-5" style="text-align:right; padding-right: 8em">Actions</h3>
             </div>
             <div class="panel panel-default" *ngFor="let message of messages.resultSet | paginate: {id: 'message-pg-ctrl', itemsPerPage: messages.pageSize, currentPage: messages.pageNumber, totalItems: messages.count }">
               <!-- <div class="panel-heading">Panel heading without title</div> -->
